# llvm_bc_splitter

./: CMakeLists.txt  README.md  bc_splitter.cpp
include/: common.h  core.h  linker.h  logging.h  optimizer.h  splitter.h  verifier.h  workdirectory.h
src/: auxilium.cpp  common.cpp  core.cpp  linker.cpp  logging.cpp  main.cpp  optimizer.cpp  splitter.cpp  verifier.cpp  workdirectory.cpp
